k8s/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: basta-workshop
spec:
  type: ClusterIP
  selector:
    tier: backend
    environment: development
    component: api
  ports:
  - port: 8080
    targetPort: 5000
