k8s/api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: basta-workshop
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api
            port: 
              number: 8080
